# qslim

./: .gitignore  COPYING.txt  README.md
examples/: Makefile  propslim.cxx  propvis.cxx  smfview.cxx
libgfx/: CHANGES.txt  README.txt  config.status  configure  configure.bat  configure.in  gfx-config  gfx-config.in  gfx-config.vc  vc-config.in
libgfx/doc/: build.html  cdoc.css  ex-gui.html  ex-script.html  geom3d.html  gl.html  gui.html  index.html  intvec.html  license.html  mat.html  mat2.html  mat3.html  mat4.html  quat.html  raster.html  rotate.html  script.html  start.html  vec.html  vec2.html  vec3.html  vec4.html
libgfx/include/gfx/: arcball.h  array.h  baseball.h  config.h  config.h.in  geom4d.h  gfx.h  gl.h  glext.h  gltools.h  gui.h  intvec.h  mat2.h  mat3.h  mat4.h  mfc.h  quat.h  raster.h  script.h  symmat3.h  symmat4.h  trackball.h  vec2.h  vec3.h  vec4.h  wintools.h
libgfx/src/: Makefile  Makefile.vc  arcball.cxx  baseball.cxx  geom3d.cxx  geom4d.cxx  gltools.cxx  gui.cxx  mat2.cxx  mat3.cxx  mat4.cxx  quat.cxx  raster-jpeg.cxx  raster-png.cxx  raster-pnm.cxx  raster-tiff.cxx  raster.cxx  script.cxx  symmat3.cxx  symmat4.cxx  time.cxx  trackball.cxx  wintools.cxx
libgfx/tests/: Makefile  Makefile.vc  t-glext.cxx  t-glimg.cxx  t-gui.cxx  t-img.cxx  t-script.cxx  t-vec.cxx  test1.sc
libgfx/vc6/: libgfx.dsw
libgfx/vc6/libgfx/: libgfx.dsp
libgfx/vc6/libgfxmfc/: libgfx.dsp
libgfx/vc6/tglimg/: tglimg.dsp
libgfx/vc6/tgui/: tgui.dsp
libgfx/vc6/tmfc/: tmfc.dsp
libgfx/vc6/tscript/: tscript.dsp
libgfx/vc6/tvec/: tvec.dsp
mixkit/: COPYING.txt  MixKit.dsp  README.txt  configure  configure.in  mix-config  mix-config.in
mixkit/doc/: SMF.txt
mixkit/src/: Makefile  MxAsp.cxx  MxAsp.h  MxBlock.h  MxBlock3.h  MxBlockModel.cxx  MxBlockModel.h  MxCamera.cxx  MxCamera.h  MxCmdParser.cxx  MxCmdParser.h  MxDualModel.cxx  MxDualModel.h  MxDualSlim.cxx  MxDualSlim.h  MxDynBlock.h  MxEdgeFilter.cxx  MxEdgeFilter.h  MxFaceTree-2.cxx  MxFaceTree.cxx  MxFaceTree.h  MxFeatureFilter.cxx  MxFeatureFilter.h  MxFitFrame-2.cxx  MxFitFrame-vis.cxx  MxFitFrame.cxx  MxFitFrame.h  MxFrame.cxx  MxFrame.h  MxGL.h  MxGLDebug.cxx  MxGLUtils.cxx  MxGLUtils.h  MxGUI.h  MxGeoPrims.h  MxGeom2D.cxx  MxGeom2D.h  MxGeom3D.cxx  MxGeom3D.h  MxHeap.cxx  (+43 more)
tools/cluster/: Makefile  QCluster.txt  qcluster.cxx
tools/filters/: Makefile  cmdline.cxx  cmdline.h  ply.h  ply2smf.cxx  plyfile.c  smf2c.cxx  smf2flat.cxx  smf2iv.cxx  smf2ldmesh.cxx  smf2ply.cxx  smfboundary.cxx  smfcat.cxx  smfclean.cxx  smfedgelist.cxx  smferror.cxx  smfmeasure.cxx  smfquadric.cxx  smfrefine.cxx  smfsphere.cxx  smfstitch.cxx
tools/qslim/: Makefile  QSlim.txt  cmdline.cxx  main.cxx  output.cxx  qslim.cxx  qslim.h  qslim_obj.sh  qvis.cxx  qvis_obj.sh
win32/: SlimKit.dsw
win32/QSlim/: QSlim.dsp
win32/QVis/: QVis.dsp
win32/SMFView/: SMFView.dsp
win32/smfclean/: smfclean.dsp
win32/smfmeasure/: smfmeasure.dsp
win32/smfquadric/: smfquadric.dsp
